# twist_drive

./: .gitignore  Cargo.toml  README.md  log4rs-dev.yaml  log4rs-prod.yaml
crates/client/: Cargo.toml
crates/client/src/: client_commons.rs  lib.rs  main.rs
crates/client/src/client_commands/: download.rs  upload.rs
crates/client/src/client_commons/: client_arguments.rs  client_constants.rs  client_errors.rs
crates/core/: Cargo.toml
crates/core/src/: file.rs  files.rs  lib.rs  logs.rs
crates/server/: Cargo.toml
crates/server/src/: arguments.rs  commons.rs  constants.rs  file.rs  lib.rs  main.rs  route.rs  server_commons.rs
crates/server/src/route/: exists_route.rs  upload_route.rs
crates/server/src/server_commons/: server_arguments.rs
