[package]
name = "twist_drive_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
twist_drive_core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
thiserror = "1.0"
tokio-util = { version = "0.7.8", features = ["io"] }
anyhow = "1.0.75"
futures = "0.3.28"
bytes = "1.4.0"
log4rs = "1.2.0"
log = "0.4.20"
async-recursion = "1.0.5"
