[package]
name = "twist_drive_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.2", features = ["alloc", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
log4rs = { version = "1", features = ["gzip"] }
log = "0.4"
anyhow = "1.0.75"
