[package]
name = "twist_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
chrono = "0.4.27"
lance = "0.6.2"
log = "0.4.20"
log4rs = { version = "1.2.0", features = ["gzip"] }
serde = "1.0.188"
serde_json = "1.0.105"
structopt = "0.3.26"
tokio = "1.32.0"
twist_core = { path = "../core" }
